# docs/API.yaml
@@ -65,6 +65,27 @@ paths:
           description: Вы ввели не все данные в body
         '401':
           description: Пользователь не найден
+  /createSocial:
+    post:
+      tags:
+        - Пользователи
+      summary: Добавляет социальную сеть пользователя
+      description: Добавляет социальную сеть пользователя
+      operationId: addUser
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserSocials'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/UserSocials'
+        required: true
+      responses:
+        '200':
+          description: Успех!
+        '204':
+          description: Вы ввели не все данные в body
   /getUserById/{id}:
     get:
       tags:
@@ -140,6 +161,38 @@ paths:
                 $ref: "#/components/schemas/UserSocials"
         '401':
           description: Пользователь не найден
+  /updateUserInfo:
+    put:
+      tags:
+        - Пользователи
+      summary: Обновить инфу о пользователе
+      description: Обновить инфу о пользователе
+      operationId: UserInfoUpdate
+      responses:
+        '200':
+          description: Успех!
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserInfoUpdate"
+        '204':
+          description: Вы ввели не все данные
+  /updateSocial:
+    put:
+      tags:
+        - Пользователи
+      summary: Обновить социальные сети пользовотеля
+      description: Обновить социальные сети пользовотеля
+      operationId: UserSocialUpdate
+      responses:
+        '200':
+          description: Успех!
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserSocialUpdate"
+        '204':
+          description: Вы ввели не все данные
 components:
   schemas:
     User:
@@ -161,8 +214,6 @@ components:
           type: string
           format: string
           example: user
-      xml:
-        name: User
     UserInfo:
       type: object
       properties:
@@ -186,8 +237,6 @@ components:
           type: string
           format: string
           example: "@kirushka"
-      xml:
-        name: User
     UserSocials:
       type: array
       items:
@@ -205,8 +254,6 @@ components:
             type: string
             format: string
             example: https://t.me/@kirill228
-        xml:
-          name: User
     UserRegister:
       type: object
       properties:
@@ -222,8 +269,6 @@ components:
           type: string
           format: string
           example: test@main.ru
-      xml:
-        name: User
     UserAuthorization:
       type: object
       properties:
@@ -235,5 +280,47 @@ components:
           type: string
           format: string
           example: test123
-      xml:
-        name: User
+    UserInfoUpdate:
+      type: object
+      required:
+        - id
+      properties:
+        id:
+          type: integer
+          format: int
+          example: 1
+        about:
+          type: string
+          format: string
+          example: Cool Man =)
+        avatar:
+          type: string
+          format: string
+          example: http://localhost:8080/files/Kirill/avatar.png
+        nickname:
+          type: string
+          format: string
+          example: Kirill228
+        link:
+          type: string
+          format: string
+          example: "@kirushka"
+    UserSocialUpdate:
+      type: array
+      items:
+        type: object
+        required:
+          - id
+        properties:
+          id:
+            type: integer
+            format: int
+            example: 1
+          soc_name:
+            type: string
+            format: string
+            example: Telegram
+          avatar:
+            type: string
+            format: string
+            example: https://t.me/@kirill228
